--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ dependencies = [
     "matplotlib>=3.5.0",
     "jupyter>=1.0.0",
     "pillow>=8.0.0",
+    "mlx-lm>=0.25.2",
+    "sentence-transformers>=4.1.0",
 ]
 
 [project.optional-dependencies]
