--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.12.13
+aiosignal==1.3.2
+annotated-types==0.7.0
 anyio==4.9.0
 appnope==0.1.4
 argon2-cffi==25.1.0
@@ -5,6 +9,7 @@ argon2-cffi-bindings==21.2.0
 arrow==1.3.0
 asttokens==3.0.0
 async-lru==2.0.5
+async-timeout==4.0.3
 attrs==25.3.0
 babel==2.17.0
 beautifulsoup4==4.13.4
@@ -15,6 +20,7 @@ charset-normalizer==3.4.2
 comm==0.2.2
 contourpy==1.3.0
 cycler==0.12.1
+dataclasses-json==0.6.7
 debugpy==1.8.14
 decorator==5.2.1
 defusedxml==0.7.1
@@ -23,9 +29,11 @@ executing==2.2.0
 fastjsonschema==2.21.1
 fonttools==4.58.4
 fqdn==1.5.1
+frozenlist==1.7.0
 h11==0.16.0
 httpcore==1.0.9
 httpx==0.28.1
+httpx-sse==0.4.0
 idna==3.10
 importlib-metadata==8.7.0
 importlib-resources==6.5.2
@@ -36,6 +44,7 @@ isoduration==20.11.0
 jedi==0.19.2
 jinja2==3.1.6
 json5==0.12.0
+jsonpatch==1.33
 jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
@@ -52,11 +61,23 @@ jupyterlab-pygments==0.3.0
 jupyterlab-server==2.27.3
 jupyterlab-widgets==3.0.15
 kiwisolver==1.4.7
+langchain==0.3.25
+langchain-community==0.3.25
+langchain-core==0.3.65
+langchain-text-splitters==0.3.8
+langgraph==0.4.8
+langgraph-checkpoint==2.0.26
+langgraph-prebuilt==0.2.2
+langgraph-sdk==0.1.70
+langsmith==0.3.45
 markupsafe==3.0.2
+marshmallow==3.26.1
 matplotlib==3.9.4
 matplotlib-inline==0.1.7
 mistune==3.1.3
 mlx==0.26.1
+multidict==6.4.4
+mypy-extensions==1.1.0
 nbclient==0.10.2
 nbconvert==7.16.6
 nbformat==5.10.4
@@ -64,8 +85,10 @@ nest-asyncio==1.6.0
 notebook==7.4.3
 notebook-shim==0.2.4
 numpy==2.0.2
+orjson==3.10.18
+ormsgpack==1.10.0
 overrides==7.7.0
-packaging==25.0
+packaging==24.2
 pandocfilters==1.5.1
 parso==0.8.4
 pexpect==4.9.0
@@ -73,18 +96,24 @@ pillow==11.2.1
 platformdirs==4.3.8
 prometheus-client==0.22.1
 prompt-toolkit==3.0.51
+propcache==0.3.2
 psutil==7.0.0
 ptyprocess==0.7.0
 pure-eval==0.2.3
 pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-settings==2.9.1
 pygments==2.19.1
 pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-json-logger==3.3.0
 pyyaml==6.0.2
 pyzmq==27.0.0
 referencing==0.36.2
 requests==2.32.4
+requests-toolbelt==1.0.0
 rfc3339-validator==0.1.4
 rfc3986-validator==0.1.1
 rpds-py==0.25.1
@@ -93,7 +122,9 @@ setuptools==80.9.0
 six==1.17.0
 sniffio==1.3.1
 soupsieve==2.7
+sqlalchemy==2.0.41
 stack-data==0.6.3
+tenacity==9.1.2
 terminado==0.18.1
 tinycss2==1.4.0
 tomli==2.2.1
@@ -101,6 +132,8 @@ tornado==6.5.1
 traitlets==5.14.3
 types-python-dateutil==2.9.0.20250516
 typing-extensions==4.14.0
+typing-inspect==0.9.0
+typing-inspection==0.4.1
 uri-template==1.3.0
 urllib3==2.4.0
 wcwidth==0.2.13
@@ -108,4 +141,7 @@ webcolors==24.11.1
 webencodings==0.5.1
 websocket-client==1.8.0
 widgetsnbextension==4.0.14
+xxhash==3.5.0
+yarl==1.20.1
 zipp==3.23.0
+zstandard==0.23.0
