Update .gitignore to exclude Swift binary files and build artifacts
- Add exclusions for Swift binaries (*.dSYM/, *.o, *.a, *.dylib, etc.)
- Add exclusions for Swift compilation artifacts (.swiftpm/, DerivedData/, *.xcarchive)
- Add exclusion for git directories inside dependencies (**/.git/)
- Remove Package.resolved from tracking to prevent version conflicts

--- a/.gitignore
+++ b/.gitignore
@@ -72,6 +72,23 @@ DerivedData
 .build/
 Packages/
 *.swiftpm/xcode/package.xcworkspace/contents.xcworkspacedata
+Package.resolved
+
+# Swift binaries and executables
+*.dSYM/
+*.o
+*.a
+*.dylib
+*.so
+*.dll
+
+# Swift compilation artifacts
+.swiftpm/
+DerivedData/
+*.xcarchive
+
+# Git directories inside dependencies
+**/.git/
 
 # VS Code
 .vscode/
